--- a/GroupNoteApp/AndroidManifest.xml
+++ b/GroupNoteApp/AndroidManifest.xml
@@ -33,7 +33,8 @@
           android:label="@string/app_name">
 		</activity>
 		<activity android:name="com.cs307.groupnote.Login"
-          android:label="@string/app_name">
+          android:label="@string/app_name"
+          android:launchMode="singleTop">
           <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
