--- a/GroupNoteApp/bin/AndroidManifest.xml
+++ b/GroupNoteApp/bin/AndroidManifest.xml
@@ -26,7 +26,8 @@
           android:label="@string/app_name">
 		</activity>
 		<activity android:name="com.cs307.groupnote.EditNote"
-          android:label="@string/app_name">
+          android:label="@string/app_name"
+          android:stateNotNeeded="true">
 		</activity>
 		<activity android:name="com.cs307.groupnote.FindSession"
           android:label="@string/app_name">
